--- a/Frontend/css/variables.css
+++ b/Frontend/css/variables.css
@@ -7,7 +7,7 @@
     --celeste: #a6cde4;
     --morado: #a096c8;
 
-    --padding: 6px;
+    --padding-pag-6px: 6px;
     --padding-estandar: 8px;
     --border-radius: 8px;
     --h4: 18px;
