--- a/Frontend/css/login.css
+++ b/Frontend/css/login.css
@@ -3,34 +3,55 @@
 }
 
 form {
-    width: 320px;
+    width: 500px;
+    height: 350px;
     margin: 50px,auto;
-    border: 1px solid;
-    border-radius: 30px;
     text-align: center;
 }
 
 input {
-    width: 80%;
+    width: 52%;
+    height: 30px;
     margin-bottom: 8px;
     margin-left: 8px;
     margin-right: 8px ;
+    border-radius: 5px;
+    border: 1px solid black;
+    background-color: transparent;
 }
 
 .label-usuario {
     margin-right: 205px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
 
 .label-contraseña {
-    margin-right: 185px;
+    margin-right: 179px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 #caja-usuario {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 }
 
 #campo-loguearse {
-    width: auto;
+    width: 15%;
+    height: 10%;
+    font-size: 16px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    border-radius: 8px;
+    border: 1px solid #555;
+    background-color: var(--amarillo);
+}
+
+p {
+    color: red;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+p a {
+    color: red;
+    text-decoration: none;
 }
 
 
@@ -39,4 +60,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: var(--blanco);
+}
+
+
+h1 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 45px;
 }
