--- a/Frontend/css/variables.css
+++ b/Frontend/css/variables.css
@@ -8,6 +8,7 @@
     --naranja: #fa6d48;
     --celeste: #a6cde4;
     --morado: #a096c8;
+    --morado-oscuro: #8662b6;
     --gris: #dfded5;
 
     --padding-pag-6px: 6px;
