--- a/Frontend/css/navbar.css
+++ b/Frontend/css/navbar.css
@@ -16,6 +16,13 @@
   width: 100%;
   height: 100%;
   object-fit: contain;
+  margin-top: 5px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.logo:hover {
+  transform: scale(1.05);
 }
 .sidebar-middle {
   flex: 1;
@@ -94,6 +101,7 @@
   height: 35px;
   z-index: 1; 
   transition: transform 0.2s ease;
+  margin-bottom: 5px;
 }
 
 .hover-effect {
