recuperacion del codigo perdido

--- a/Frontend/css/variables.css
+++ b/Frontend/css/variables.css
@@ -7,9 +7,12 @@
     --negro: #47413e;
     --naranja: #fa6d48;
     --celeste: #a6cde4;
+    --celeste-oscuro: #73a1b9;
     --morado: #a096c8;
+    --morado-oscuro: #73699b;
     --gris: #dfded5;
-
+    --rojo: #f46a6a;
+    --rojo-oscuro: #db4747;
     --padding-pag-6px: 6px;
     --padding-estandar: 8px;
     --border-radius: 8px;
