se agrego el formulario de edicion de datos del perfil, aun no funciona con la API

--- a/front/css/perfil.css
+++ b/front/css/perfil.css
@@ -764,3 +764,127 @@ body, html {
 }
 
 
+
+
+
+
+
+
+
+
+
+/* OVERLAY */
+.modal-overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.25);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+/* TARJETA */
+.modal-card {
+  background: #fff;
+  width: 700px;
+  border-radius: 14px;
+  padding: 20px 24px 24px;
+  box-shadow: 0 20px 40px rgba(0,0,0,0.2);
+}
+
+/* HEADER */
+.modal-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.modal-top h2 {
+  margin: 0;
+  font-size: 22px;
+}
+
+/* BOTONES HEADER */
+.modal-top-actions {
+  display: flex;
+  gap: 10px;
+}
+
+.btn-cancelar {
+  background: #e5e2d8;
+  border: none;
+  padding: 6px 14px;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.btn-guardar {
+  background: #f2c94c;
+  border: none;
+  padding: 6px 16px;
+  border-radius: 6px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+/* CONTENIDO */
+.modal-content {
+  display: grid;
+  grid-template-columns: 220px 1fr;
+  gap: 24px;
+}
+
+/* AVATAR */
+.modal-avatar {
+  display: flex;
+  justify-content: center;
+}
+
+.avatar-box {
+  width: 220px;
+  height: 255px;
+  position: relative;
+  background: var(--blanco);
+  border: var(--border-estandar);
+  box-shadow: 9px 8px 0px var(--negro); 
+}
+
+.profile-image-edit {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    margin: 0 auto 15px;
+    margin-top: 10px;
+    display: block;
+    border: var(--border-estandar);
+}
+
+.avatar-box i {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+  background: rgba(255,255,255,0.8);
+  padding: 6px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+/* FORMULARIO */
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-form label {
+  font-size: 14px;
+  margin-bottom: 4px;
+}
+
+.modal-form input {
+  margin-bottom: 12px;
+  padding: 8px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+}
